# django-websockets-tutorial

./: docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
chat/: consumers.py  urls.py
config/: asgi.py  settings.py
