[tool.poetry]
name = "django-websockets-tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_websockets_tutorial"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
channels = {extras = ["daphne"], version = "^4.0.0"}
channels-redis = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
